--- a/center/flexBox.css
+++ b/center/flexBox.css
@@ -1,12 +1,13 @@
 .parent{
     width: 100%;
-    height: 1000px;
+    height: 100px;
     background-color: #954121;
     display: flex;
-    justify-content: space-around;
+    /*justify-content: space-around;*/
     align-items: center;
+    /*flex-direction: column;*/
 }
 .child{
-    width: 200px;
-    height: 500px;
+    /*width: 200px;*/
+    /*height: 500px;*/
 }
