--- a/center/flexBox.css
+++ b/center/flexBox.css
@@ -1,13 +1,28 @@
-.parent{
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.parent {
     width: 100%;
-    height: 100px;
+    height: 200px;
     background-color: #954121;
     display: flex;
-    /*justify-content: space-around;*/
-    align-items: center;
+    /*justify-content: space-between;*/
+    /*align-items: stretch;*/
+    /*align-content: space-between;*/
     /*flex-direction: column;*/
+    /*flex-wrap: wrap-reverse;*/
+
 }
-.child{
-    /*width: 200px;*/
-    /*height: 500px;*/
+
+.child_1{
+    width: 100px;
+    height: 100px;
+    /*flex-grow: 2;*/
+flex-shrink: 0;
+}
+.child {
+    width: 100px;
+    height: 100px;
 }
