--- a/zishiying/calc.css
+++ b/zishiying/calc.css
@@ -1,27 +1,30 @@
-.parent{
-    width: calc(100%-2*5);
+.parent {
+    width: calc(100% - 2 * 5);
     background-color: #954121;
     margin: 0 auto;
     padding: 5px;
 }
-.header{
+
+.header {
     height: 50px;
     padding: 60px;
-    width: calc(100%-120px);
+    width: calc(100% - 120px);
     background-color: #408080;
 }
-.content{
+
+.content {
     height: 800px;
     float: left;
     padding: 50px;
     border: 5px solid #BB6688;
     background-color: #eeeeee;
-    width: calc(75%-2*(50px+5px));
+    width: calc(75% - 2 * (50px + 5px));
 }
-.left{
+
+.left {
     background-color: #eeeeee;
     border: 5px solid #0000FF;
     padding: 25px;
-    width: calc(25%-2*(5px+25px));
+    width: calc(25% - 2 * (5px + 25px));
 }
 
