--- a/zishiying/dinggao.css
+++ b/zishiying/dinggao.css
@@ -1,23 +1,31 @@
-body{
+body {
     margin: 0;
     padding: 0;
 }
-.parent {
-    display: flex;
-    flex-direction: column;
-}
 
 .top {
-    height: 300px;
+    height: 100px;
     background-color: #954121;
     width: 100%;
     position: absolute;
     top: 0;
 }
 
+.content {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 100px;
+    bottom: 100px;
+    background-color: #408080;
+
+}
+
 .bottom {
     width: 100%;
+    height: 100px;
     background-color: #40a070;
     position: absolute;
-    top: 300px;
+    bottom: 0;
 }
+
