--- a/zishiying/lianglie.css
+++ b/zishiying/lianglie.css
@@ -1,12 +1,13 @@
+
 .left{
     width: 300px;
     height: 800px;
     background-color: #0000FF;
-    /*float: left;*/
-    position: absolute;
-    left: 0;
+    float: left;
+/*    position: absolute;
+    left: 0;*/
 }
 .right{
     background-color: #BB6688;
-    margin-left: 5px;
+    margin-left: 300px;
 }
